<resources>
    <string name="app_name">GodKänt</string>
    <string name="app_language">GodKänt på svenska</string>
    <string name="title_activity_about">About</string>
    <string name="enter_code">Ange kod</string>
    <string name="login">Logga in</string>
    <string name="logout">Logga ut</string>
    <string name="free_test">Testa gratis</string>
    <string name="subscribe">Prenumerera</string>
    <string name="about">Om oss</string>
    <string name="application_warning_internet">Appen kräver en aktiv internetanslutning, anslut din enhet till internet innan du startar appen!</string>
    <string name="check_your_internet_connection">Kontrollera din internetanslutning!</string>
    <string name="no_internet_connection">Ingen internetanslutning!</string>
    <string name="unknown_error_occurred">Okänt fel har inträffat!</string>
    <string name="please_enter_a_code_first">Var god ange en kod först!</string>
    <string name="please_enter_a_valid_code_first">Var god ange en giltig kod först!</string>
    <string name="code_has_been_used_on_another_device">Koden har använts på en annan enhet!</string>
    <string name="code_has_expired">Koden har gått ut!</string>
    <string name="invalid_credentials">Ogiltiga uppgifter!</string>
    <string name="code_activated_for">Koden aktiverad för:</string>
    <string name="days">dagar!</string>
    <string name="hours">timmar!</string>
    <string name="login_succeed">Inloggningen lyckades</string>
    <string name="okay">Okej</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="back">Tillbaka</string>
    <string name="close">Stäng</string>
    <string name="exit">Utgång</string>
    <string name="dash">-</string>
    <string name="start">Start</string>
    <string name="favorite_list">Favoritlista</string>
    <string name="latest_result">Senaste resultatet</string>
    <string name="expiration_date">Utgångsdatum</string>
    <string name="mode_study">Studera</string>
    <string name="mode_test">Testa</string>
    <string name="mode_exam">Examen</string>
    <string name="reward_ad_message">För att göra en exam får du titta färdigt på en reklam först. Vill du förstätta?</string>
    <string name="file_default_title">Körkort-B frågor, pärm</string>
    <string name="choose_test">Välja pärm</string>
    <string name="number_of_binders_colon">Antalet pärm:</string>
    <string name="binder">Pärm</string>
    <string name="unopened_yet">Oöppnad ännu</string>
    <string name="started_unfinished">Påbörjat, oavslutat</string>
    <string name="header">Kunskapsprov</string>
    <string name="succeed">Godkänt</string>
    <string name="failed">Underkänt</string>
    <string name="questions_counter">1/70</string>
    <string name="default_value">0</string>
    <string name="answer_a">Svar A</string>
    <string name="answer_b">Svar B</string>
    <string name="answer_c">Svar C</string>
    <string name="answer_d">Svar D</string>
    <string name="time">00:00</string>
    <string name="default_question_value">1</string>
    <string name="next">Nästa &gt;</string>
    <string name="previous">&lt; Tidigare</string>
    <string name="end">Avsluta</string>
    <string name="previous_code">1</string>
    <string name="next_code">2</string>
    <string name="marked_colon">Markerade:</string>
    <string name="unanswered_colon">Obesvarade:</string>
    <string name="show_right_answer">Visa rätt svar</string>
    <string name="show_test_info">Visa testuppgifter</string>
    <string name="show_time">Visa tiden</string>
    <string name="mark_answers">Markera svar</string>
    <string name="save_question">Lägg till i din favoritlista</string>
    <string name="delete_question">Ta bort från favoritlistan</string>
    <string name="empty_favorite_list">Tom favoritlista</string>
    <string name="report_question">Rapportera frågan</string>
    <string name="save_all_Marked_questions">Lägg till alla markerade frågor</string>
    <string name="save_all_wrong_questions">Lägg till alla fel besvarade frågor</string>
    <string name="marked_questions_added_to_favorite_list">Alla markerade frågor har lagts till i din favoritlista</string>
    <string name="wrong_questions_added_to_favorite_list">Alla fel besvarade frågor har lagts till i din favoritlista</string>
    <string name="marked_questions_exists_already">Alla markerade frågor finns redan i din favoritlista</string>
    <string name="wrong_questions_exists_already">Alla fel besvarade frågor finns redan i din favoritlista</string>
    <string name="there_is_no_marked_questions">Det finns inga markerade frågor</string>
    <string name="there_is_no_wrong_questions">Det finns inga fel besvarade frågor</string>
    <string name="delete_question_ask">Är du säker på att du vill ta bort frågan från din favoritlista?</string>
    <string name="delete_question_done">Frågan har tagits bort från favoritlistan</string>
    <string name="empty_favorite_list_ask">Är du säker på att du vill tömma din favoritlista?</string>
    <string name="empty_favorite_list_done">Din favoritlista är tom nu</string>
    <string name="add_question_done">Frågan har lagts till i favoritlistan</string>
    <string name="favorite_list_empty">Din favoritlista är tom!</string>
    <string name="latest_tests_unavailable">Du har inga test gjort!</string>
    <string name="database_has_been_updated">Databasen har uppdaterats, ditt senaste resultat har tagits bort!</string>
    <string name="report">Rapportera</string>
    <string name="report_issue_1">Formatet på frågan är felaktigt</string>
    <string name="report_issue_2">Frågan saknar en illustrativ bild</string>
    <string name="report_issue_3">Andra</string>
    <string name="report_issue_null">Jag tvivlar på denna fråga</string>
    <string name="write_feedback_here">Skriv problemet här</string>
    <string name="reported_successfully">Frågan rapporterats framgångsrikt</string>
    <string name="already_reported">Frågan har redan rapporterats</string>
    <string name="ten_minutes_left">Tio minuter kvar!</string>
    <string name="time_is_up">Tiden är ute!\nKlicka på \"Avsluta\" för att visa ditt resultat</string>
    <string name="cancel_test_ask">Är du säker på att du vill gå tillbaka?</string>
    <string name="end_test_ask">Är du säker på att du vill avsluta testet?</string>
    <string name="you_are_done">Du är klar!</string>
    <string name="you_have_left_colon">Du har kvar:</string>
    <string name="marked_questions">Markerade frågor</string>
    <string name="unanswered_questions">Obesvarade frågor</string>
    <string name="done_list_test_number">Testnummer:</string>
    <string name="done_list_total_questions">Totala frågor:</string>
    <string name="done_list_right_questions">Rätt besvarade frågor:</string>
    <string name="done_list_limit">kravgräns:</string>
    <string name="done_list_wrong_questions">Fel besvarade frågor:</string>
    <string name="done_list_left_questions">Obesvarade frågor:</string>
    <string name="done_list_total_time">Spenderad tid:</string>
    <string name="show_my_answers">Visa mina svar</string>
    <string name="my_result">Mitt resultat</string>
    <string name="valid_until">Giltigt t.o.m</string>
    <string name="serial_number">Serienummer</string>
    <string name="update">Uppdatering</string>
    <string name="update_now">Uppdatera nu</string>
    <string name="update_available">Ny version är tillgänglig, du måste uppdatera appen innan du fortsätter</string>
    <string name="rate_us_ask">Vill du gradera oss på Google Play?</string>
    <string name="not_now">Inte nu</string>
    <string name="do_not_remind_me">Påminn mig inte</string>
    <string name="developer_website">https://acodigo.com/</string>
    <string name="support_email_address">support@acodigo.com</string>
    <string name="support_mobile_phone">+46 738 77 34 28</string>
    <string name="subscribe_message">För att prenumerera på appen\nVänligen kontakta oss via mobilnummer\nTack för att använda vår app</string>
    <string name="mobile_phone_text">Mobilnummer</string>
    <string name="email_address_text">E-post</string>
    <string name="choose_alternative_colon">Välj alternativ:</string>
    <string name="information">Information</string>
</resources>