<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroupReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:checkedButton="@+id/radioButton1">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@null"
            android:button="@null"
            android:checked="true"
            android:drawableStart="@drawable/background_radio_button"
            android:drawablePadding="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/report_issue_1"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:buttonTint="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@null"
            android:button="@null"
            android:drawableStart="@drawable/background_radio_button"
            android:drawablePadding="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/report_issue_2"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:buttonTint="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@null"
            android:button="@null"
            android:drawableStart="@drawable/background_radio_button"
            android:drawablePadding="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/report_issue_3"
            android:textAlignment="textStart"
            android:textSize="14sp"
            app:buttonTint="@color/colorPrimary" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/write_feedback_here"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textCursorDrawable="@color/colorPrimary"
        android:visibility="gone"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/buttonReport"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/report"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</LinearLayout>