<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_static_square_white_border_primary"
    android:gravity="center"
    android:layoutDirection="ltr">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="serif"
            android:gravity="center"
            android:lineSpacingExtra="10dp"
            android:padding="20dp"
            android:text="@string/subscribe_message"
            android:textColor="@color/colorWhite"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/buttonCall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_call_white"
                android:text="@string/support_mobile_phone"
                android:textColor="@color/colorWhite"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/email_address_text"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="3">

            <Button
                android:id="@+id/buttonEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_email_white"
                android:text="@string/support_email_address"
                android:textColor="@color/colorWhite"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorPrimary"
            android:fontFamily="serif"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonClose"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_reverse_round_white_border_primary"
            android:text="@string/close"
            android:textAllCaps="false"
            android:textColor="@drawable/shape_reverse_round_white_border_primary"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>