<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:layoutDirection="ltr">

    <RelativeLayout
        android:id="@+id/relativeLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/background_header_footer">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/icon_start_logo"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayoutBottom"
        android:layout_below="@id/relativeLayoutTop"
        android:layout_margin="10dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="false"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/shape_reverse_round_primary"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@drawable/shape_reverse_round_primary"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="8dp">

                <Button
                    android:id="@+id/buttonFavorite"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_reverse_round_primary"
                    android:text="@string/favorite_list"
                    android:textAllCaps="false"
                    android:textColor="@drawable/shape_reverse_round_primary"
                    android:textStyle="bold" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/gifImageViewWaitFavorite"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/wait_primary_background_white"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_margin="8dp">

                <Button
                    android:id="@+id/buttonLatestResult"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/shape_reverse_round_primary"
                    android:text="@string/latest_result"
                    android:textAllCaps="false"
                    android:textColor="@drawable/shape_reverse_round_primary"
                    android:textStyle="bold" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/gifImageViewWaitLatestResult"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/wait_primary_background_white"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>

            <Button
                android:id="@+id/buttonInfo"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/shape_reverse_round_primary"
                android:text="@string/expiration_date"
                android:textAllCaps="false"
                android:textColor="@drawable/shape_reverse_round_primary"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonAbout"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_margin="8dp"
                android:background="@drawable/shape_reverse_round_white_border_primary"
                android:text="@string/about"
                android:textAllCaps="false"
                android:textColor="@drawable/shape_reverse_round_white_border_primary"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/background_header_footer"
        android:rotation="180" />

</RelativeLayout>