<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="5dp"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="5dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/shape_dynamic_circle_primary"
                android:padding="7dp"
                android:src="@drawable/icon_list"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageViewLock"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:padding="7dp"
                android:src="@drawable/ic_lock_main"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageViewNew"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:padding="7dp"
                android:src="@drawable/shape_dynamic_circle_primary"
                android:visibility="gone"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_toStartOf="@id/imageViewLock"
                android:layout_toEndOf="@+id/imageViewIcon"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_default_title"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTitle">

                    <TextView
                        android:id="@+id/textViewDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unopened_yet"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="12sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/textViewDash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/dash"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/textViewResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_result"
                        android:textColor="@color/colorGrayDark"
                        android:textSize="12sp"
                        android:visibility="gone" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>